# ar_compliance

./: .gitignore  README.md  REPORT.md  compliance.db  products_unique.txt
compliance_app/: .gitignore  README.md  requirements.txt
compliance_app/compliance_app_tailwind/: admin_routes.py  app.py  auth_helpers.py  core_routes.py  db.py  import_msrc.py  nvd_config.json  risk_routes.py  risk_utils.py  threat_ingestion.py
compliance_app/compliance_app_tailwind/templates/: admin_app.html  admin_companies.html  admin_dashboard.html  admin_profile.html  admin_report.html  admin_task_config.html  admin_task_edit.html  (+12 more)
o365-pull-connector/: Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  ruff.toml
o365-pull-connector/config/: correlation.yml  example.env  mapping.yml
o365-pull-connector/scripts/: bootstrap_db.py
o365-pull-connector/src/o365_connector/: __init__.py  __main__.py  app.py  config.py  models.py  ui.py
o365-pull-connector/src/o365_connector/clients/: defender_client.py  graph_client.py
o365-pull-connector/src/o365_connector/services/: dataset_runner.py  datasets.py  exporter.py  incidents.py  readiness.py
o365-pull-connector/src/o365_connector/templates/: index.html
o365-pull-connector/src/o365_connector/utils/: constants.py  db.py  errors.py  logging_config.py  secrets.py
o365-pull-connector/tests/clients/: test_graph_client.py
o365-pull-connector/tests/services/: test_datasets.py  test_exporter.py  test_incidents.py  test_readiness.py
o365-pull-connector/tests/utils/: test_secrets.py
(+22 files in other folders)
